[gd_scene load_steps=8 format=3 uid="uid://il4a147i4nn3"]

[ext_resource type="Script" uid="uid://db7f5jx2blp3t" path="res://scripts/companion.gd" id="1_0ewvi"]
[ext_resource type="PackedScene" uid="uid://1t0agnsbeguy" path="res://scenes/projectile_influencer.tscn" id="2_eol6h"]
[ext_resource type="Texture2D" uid="uid://chy0e4xh47rgt" path="res://icon.svg" id="3_mqvd2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rp0js"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p4qgt"]
radius = 12.0

[sub_resource type="Animation" id="Animation_eol6h"]
resource_name = "Stun"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.23333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"unstun"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqvd2"]
_data = {
&"Stun": SubResource("Animation_eol6h")
}

[node name="Companion" type="Area2D"]
collision_mask = 12
script = ExtResource("1_0ewvi")

[node name="ProjectileInfluencer" parent="." instance=ExtResource("2_eol6h")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileInfluencer"]
shape = SubResource("CircleShape2D_rp0js")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p4qgt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mqvd2")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.423529, 1, 0.470588, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_mqvd2")

[connection signal="body_entered" from="." to="." method="_on_hitbox_entered"]
[connection signal="body_entered" from="ProjectileInfluencer" to="." method="_on_projectile_influencer_body_entered"]
[connection signal="body_exited" from="ProjectileInfluencer" to="." method="_on_projectile_influencer_body_exited"]
